--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "JATE",
+  "name": "idb-text-editor",
   "version": "1.0.0",
-  "description": "",
+  "engines:": {
+    "node": "16.10.0",
+    "npm": "7.24.0"
+  },
+  "description": "Just another text editor.",
   "main": "server.js",
   "scripts": {
-    "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
     "start": "npm run build && cd server && node server.js",
-    "server": "cd server server.js --ignore client",
+    "server": "cd server nodemon server.js --ignore client",
     "build": "cd client && npm run build",
-    "install": "cd client && npm install",
+    "install": "cd client && npm install && cd ../server && npm install",
     "client": "cd client && npm start"
   },
   "keywords": [],
